src/test/deca/syntax/invalid/AvecObjet/FieldSansType.deca
//Description
//  test de field sans type
//
//Réponse
//  Erreur syntaxique ligne 9
//  no viable alternative at input 'x'

class TestInvalide {
    x;

}